[package]
name = "ito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
askama = "0.11.1"
axum = "0.6.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["url"] }
serde = "1.0.152"
tokio = {version = "1", features = ["full"]}
url = { version = "2.3.1", features = ["serde"] }
